--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "name": "chiebukuro",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "bootstrap": "^5.1.3",
+    "jquery": "^3.6.0",
+    "popper": "^1.0.1",
+    "popper.js": "^1.16.1",
+    "rails-ujs": "^5.2.8"
+  }
 }
