--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,14 +9,7 @@ services:
     ports:
       - '3309:3306'
     volumes:
-      # - ./db/mysql/volumes:/var/lib/mysql
-      - .:/app:cached
-      - bundle:/usr/local/bundle:cached
-      # 1. exclude volumes
-      - /app/vendor
-      - /app/tmp
-      - /app/log
-      - /app/.git
+      - ./db/mysql/volumes:/var/lib/mysql
     
     
   web:
