--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - '3309:3306'
     volumes:
-      - ./db/mysql/volumes:/var/lib/mysql
+      - db_data:/var/lib/mysql
     
     
   web:
@@ -27,3 +27,4 @@ services:
 
 volumes:
   gem_data:
+  db_data:
